# Dagster_Docker_CICD

./: Dockerfile  README.md  dagster.yaml  dagster.yml  docker-compose.yaml  pyproject.toml  requirements.txt  workspace.yaml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
data/: cleaned_output.csv  data.csv
src/etl/: assets.py  definitions.py
src/etl.egg-info/: PKG-INFO  SOURCES.txt
